# Academia-Guard

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.dvc/: config
academia-guard/: __init__.py  dataset.py  features.py  plots.py
academia-guard/modeling/: predict.py  train.py
data/: raw.dvc
docs/: mkdocs.yml
docs/docs/: index.md
