[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "academia-guard"
version = "0.0.1"
description = "AcademiaGuard is an interpretable AI-powered early warning system for higher education institutions to proactively reduce student attrition by identifying at-risk individuals and the specific factors driving\u00a0their\u00a0risk."
authors = [
  { name = "Ahmad Raza" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "awscli",
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "xgboost (>=3.0.4,<4.0.0)",
    "lazypredict (>=0.2.16,<0.3.0)",
    "optuna (>=4.5.0,<5.0.0)",
    "dvc (>=3.63.0,<4.0.0)",
    "mlflow (>=3.3.2,<4.0.0)",
    "bentoml (>=1.4.22,<2.0.0)",
    "shap (>=0.48.0,<0.49.0)",
    "evidently (>=0.7.14,<0.8.0)",
    "streamlit (>=1.49.1,<2.0.0)",
    "great-expectations (>=1.5.10,<2.0.0)",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["academia-guard"]
include = ["pyproject.toml", "academia-guard/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["academia-guard"]
force-sort-within-sections = true

